[tool.poetry]
name = "mlflow-logger-ext"
version = "0.2.3"
description = "Using python decorator to manage MlFlow"
authors = ["seanyu <weihsiang.yu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
llvmlite = "^0.39.0"
mlflow = {version = "^2.20"}
loguru = "*"
gitpython = "*"

[tool.poetry.dev-dependencies]
ipython = "*"
ipykernel = "*"
nitpick = "^0.32.0"
black = "^22.10"
flake8 = "^4.0.1"
pytest = "^7.2.0"
wemake-python-styleguide = ">=0.17"

[tool.nitpick]
style = [
    "https://github.com/aetherAI/Pypi-Project-Template/blob/v4.x/nitpick-style/lint.toml",
]
cache = "never"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
